Fixed some css issues, added more info on the home page, added a contact page and further fixing with layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ code {
 }
 
 #closed {
-  transform: translateY(-100%);
+  transform: translateY(-110%);
 }
 
 #open {
